--- a/src/App.css
+++ b/src/App.css
@@ -270,11 +270,74 @@ section {
   transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease; /* Shorthand property */
 }
 
-.btn-box:hover {
-  background: #ffffff; /* White background on hover */
-  color: #66b3ff; /* Blue text on hover */
-  box-shadow: 0 0 5px #66b3ff, 0 0 25px #66b3ff, 0 0 50px #66b3ff, 0 0 100px #66b3ff, 0 0 200px #66b3ff; /* Blue shadow on hover */
-}
+.button {
+    position: relative;
+    top: -20px;
+    left: 44px;
+    margin-top: 30px;
+    height: 55px;
+    width: 250px;
+    background: #66b3ff;
+    border-radius: 55px;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    overflow: hidden;
+  }
+  
+  .button.active {
+    height: 20px;
+    width: 250px;
+  }
+  
+  .button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    background: #5b13b9;
+    border-radius: 55px;
+    transition: all 6s ease-in-out;
+  }
+  
+  .button.active::before {
+    animation: layer 2s ease-in-out forwards;
+  }
+  
+  @keyframes layer {
+    100% {
+      left: 0%;
+    }
+  }
+  
+  .button .content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s ease;
+    transition-delay: 0.2s;
+  }
+  
+  .button.active .content {
+    transform: translateY(60px);
+  }
+  
+  .button .content i,
+  .button .content .button-text {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+  }
+  
+  .button .content .button-text {
+    font-size: 20px;
+    margin-left: 8px;
+  }
+
 
 /* Image */
 .img {
@@ -294,7 +357,7 @@ section {
 
 .responsive {
   width: 85%;
-  height: 100%;
+  height: 88%;
   border-top-left-radius: 251px;
   border-top-right-radius: 251px;
   border-bottom-left-radius: 0px;
@@ -316,7 +379,7 @@ section {
 }
 
 /* Responsive view for the Home section */
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
   .home {
     padding: 40px 5%; /* Adjust padding for smaller screens */
     display: flex;
@@ -411,6 +474,75 @@ section {
     color: #66b3ff; /* Blue text on hover */
     box-shadow: 0 0 5px #66b3ff, 0 0 25px #66b3ff, 0 0 50px #66b3ff, 0 0 100px #66b3ff, 0 0 200px #66b3ff; /* Blue shadow on hover */
   }
+
+  .button {
+    position: relative;
+    top: -20px;
+    left: 44px;
+    margin-top: 30px;
+    height: 55px;
+    width: 250px;
+    background: #66b3ff;
+    border-radius: 55px;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    overflow: hidden;
+  }
+  
+  .button.active {
+    height: 20px;
+    width: 250px;
+  }
+  
+  .button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    background: #5b13b9;
+    border-radius: 55px;
+    transition: all 6s ease-in-out;
+  }
+  
+  .button.active::before {
+    animation: layer 2s ease-in-out forwards;
+  }
+  
+  @keyframes layer {
+    100% {
+      left: 0%;
+    }
+  }
+  
+  .button .content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s ease;
+    transition-delay: 0.2s;
+  }
+  
+  .button.active .content {
+    transform: translateY(60px);
+  }
+  
+  .button .content i,
+  .button .content .button-text {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+  }
+  
+  .button .content .button-text {
+    font-size: 20px;
+    margin-left: 8px;
+  }
+  
 }
 
 /* About Section */
